# stm32-board-microbenchmarks

./: .gitignore  CMakeLists.txt  README.md  arm-none-eabi.cmake  datasets  stm32g474re.ld
benchmark/: CMakeLists.txt  README.md
benchmark/benchmark/configs/: control_benchmarks.json  control_benchmarks_none.json  estimation_benchmarks.json  estimation_benchmarks_none.json  example_benchmarks.json  perception_benchmarks.json  robust_pose_benchmarks.json
benchmark/configs/: control_benchmarks.json  estimation_benchmarks.json  example_benchmarks.json  microbench.json  microbench_gem5.json  microbench_nocache.json  microbench_none.json  microbench_noprefetch.json  perception_benchmarks.json  robust_pose_benchmarks.json
benchmark/microbench/: CMakeLists.txt  bench_matvec_12x12.cc  bench_matvec_12x12_capture.cc  bench_preamble_zero_vldr.cc  bench_preamble_zero_vldr_capture.cc  bench_preamble_zero_vmov_dpair.cc  bench_preamble_zero_vmov_dpair_capture.cc  bench_preamble_zero_vmov_ssingle.cc  bench_preamble_zero_vmov_ssingle_capture.cc  bench_tinympc_capture.cc  bench_tinympc_diff.cc  bench_vcmpe_vmovcond.cc  bench_vldm_vstm.cc  bench_vldm_vstm_capture.cc  bench_vldmia_d1.cc  bench_vldmia_d1_capture.cc  bench_vldmia_d7wb.cc  bench_vldmia_d7wb_capture.cc  bench_vldmia_d_range.cc  bench_vldmia_d_range_capture.cc  bench_vmov.cc  bench_vmov_capture.cc  bench_vmul.cc  bench_vpush_vpop.cc  bench_vpush_vpop_capture.cc  bench_vstmia_d_range.cc  inline_benchmarks.cc  inline_harness_main.cc  kernel_art_cap_1024.S  kernel_art_mix1x3_128.S  kernels_fetch_char.h  kernels_v2_inline.h  microbench_main.cc
benchmark/microbench/fpu_calibration/: CMakeLists.txt  README.md  kernels.h
benchmark/microbench/sdiv_calibration/: CMakeLists.txt  README.md  kernels.h
benchmark/multibench/: CMakeLists.txt  multibench_core_main.cc  multibench_memory_main.cc  multibench_smoke_main.cc
benchmark/multibench/tools/: bench_spec.py  bench_spec.yaml  gen_kernels.py
benchmark/scripts/: generate_art_tables.py  run_all_benchmarks.sh  sweep_art_cache_configs.sh
microbenchmark/: CMakeLists.txt  CMakePresets.json  README.md  arm-none-eabi.cmake
microbenchmark/board/stm32g474re/: board.cmake  dwt.h  measurement_overhead.md  openocd.cfg  stm32g474re.ld
microbenchmark/configs/: gem5.cmake  hardware-full.cmake  hardware-nocache.cmake  hardware-none.cmake  hardware-noprefetch.cmake
microbenchmark/include/: harness.h  m5ops_semi.h
microbenchmark/kernels/: README.md  bench_nop16_100.S  bench_nop16_24.S  bench_nop16_48.S  bench_nop16_64.S  bench_nop16_8.S  bench_nop16_80.S
microbenchmark/kernels/alu/: bench_add16_100.S  bench_add16_16.S  bench_add16_24.S  bench_add16_8.S  bench_add32_100.S  bench_add32_16.S  bench_add32_24.S  bench_add32_8.S  bench_lsl_reg_100.S  bench_lsl_reg_16.S  bench_lsl_reg_8.S  bench_lsl_reg_9.S  bench_mul_100.S  bench_mul_16.S  bench_mul_8.S  bench_mul_9.S  bench_nop16_16.S  bench_nop16_32.S  bench_nop16_40.S  bench_nop16_56.S  bench_nop16_72.S  bench_nop16_9.S  bench_sdiv_fast_100.S  bench_sdiv_fast_16.S  bench_sdiv_fast_8.S  bench_sdiv_fast_9.S  bench_sdiv_mid_100.S  bench_sdiv_mid_16.S  bench_sdiv_mid_8.S  bench_sdiv_mid_9.S  bench_sdiv_slow_100.S  bench_sdiv_slow_16.S  bench_sdiv_slow_8.S  bench_sdiv_slow_9.S  bench_udiv_fast_100.S  bench_udiv_fast_16.S  bench_udiv_fast_8.S  bench_udiv_fast_9.S  bench_udiv_mid_100.S  bench_udiv_mid_16.S  (+10 more)
microbenchmark/kernels/fp/: bench_vabs_100.S  bench_vabs_16.S  bench_vabs_8.S  bench_vabs_9.S  bench_vadd_100.S  bench_vadd_16.S  bench_vadd_8.S  bench_vadd_9.S  bench_vcmp_100.S  bench_vcmp_16.S  bench_vcmp_8.S  bench_vcmp_9.S  bench_vcmp_zero_100.S  bench_vcmp_zero_16.S  bench_vcmp_zero_8.S  bench_vcmp_zero_9.S  bench_vcmpe_100.S  bench_vcmpe_16.S  bench_vcmpe_8.S  bench_vcmpe_9.S  bench_vcmpe_zero_100.S  bench_vcmpe_zero_16.S  bench_vcmpe_zero_8.S  bench_vcmpe_zero_9.S  bench_vcvt_f32_s16fx_100.S  bench_vcvt_f32_s16fx_16.S  bench_vcvt_f32_s16fx_8.S  bench_vcvt_f32_s16fx_9.S  bench_vcvt_f32_s32_100.S  bench_vcvt_f32_s32_16.S  bench_vcvt_f32_s32_8.S  bench_vcvt_f32_s32_9.S  bench_vcvt_f32_u16fx_100.S  bench_vcvt_f32_u16fx_16.S  bench_vcvt_f32_u16fx_8.S  bench_vcvt_f32_u16fx_9.S  bench_vcvt_f32_u32_100.S  bench_vcvt_f32_u32_16.S  bench_vcvt_f32_u32_8.S  bench_vcvt_f32_u32_9.S  (+88 more)
microbenchmark/openocd/: stlink.cfg
microbenchmark/scripts/: check_kernel_size.py  parse_results.py  scaling_nop16_sweep.py
microbenchmark/src/: flash_config.c  main.c  startup.c  system_init.c
microbenchmark/test/: README.md  _common.py  run_all_tests.py  test_board_run.py  test_board_run_all.py  test_build_all.py  test_disassembly.py  test_layout_identical.py
src/: bench_alu.S  bench_alu16.S  bench_art_prefetch.S  bench_bp_align.S  bench_bp_alternating.S  bench_bp_forward.S  bench_bp_long_body.S  bench_bp_nested.S  bench_bp_tight.S  bench_branch.S  bench_ccm_sram.S  bench_div.S  bench_div_short.S  bench_dmb.S  bench_exc_entry.S  bench_exc_entry_fp.S  bench_exc_return.S  bench_fpu.S  bench_icache_miss.S  bench_ldr_literal.S  bench_load.S  bench_load_dep.S  bench_macros.inc  bench_mixed_width.S  bench_mul.S  bench_nop.S  bench_pushpop.S  bench_scs_read.S  bench_scs_store.S  bench_stacking.S  bench_stacking_fp.S  bench_store.S  bench_store_burst.S  bench_systick.S  bench_tail_chain.S
verification/: README.md  board_reference.txt  diff_gem5_vs_board.sh  sweep_fpu_board.sh  sweep_fpu_gem5.sh
verification/logs/board/: ento_results.txt
